<resources>
    <string name="google_android_geo_api_key">AIzaSyA02eswD6zhLS4cSJoFRMM4W554dDn0Fwo</string>

    <string name="app_name">Roaddo Store</string>
    <string name="defaultFont">fonts/Poppins_Light.ttf</string>
    <string name="demo_text">Note:\nSince this is the demo version, please use below dummy credit/debit card for testing. The actual payment will not be deducted.\n\nCard Type: VISA\nCard Number: 41111111111111\nExpiry: 12/2018\nCVV: 123</string>
    <string name="demo_mobile_help">Note: Please enter the OTP \"12345\" If you do not receive SMS/EMAIL on your registered number in next one minute.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="robotomediumFont">fonts/roboto_medium.ttf</string>

    <string name="robotolightFont">fonts/roboto_light.ttf</string>
    <string name="robotobold">fonts/roboto_bold.ttf</string>


    <string name="systemRegular">fonts/Poppins_Regular.ttf</string>
       <string name="systemBold">fonts/Poppins_Bold.ttf</string>
       <string name="systemLightFont">fonts/Poppins_Light.ttf</string>
       <string name="systemMediumFont">fonts/Poppins_Medium.ttf</string>
       <string name="systemSemiBold">fonts/Poppins_SemiBold.ttf</string>


    <string name="systemRegular_name">Poppins Regular</string>
    <string name="systemBold_name">Poppins Bold</string>
    <string name="systemLightFont_name">Poppins Light</string>
    <string name="systemMediumFont_name">Poppins Medium</string>
    <string name="systemSemiBold_name">Poppins SemiBold</string>

    <string name="com.twitter.sdk.android.CONSUMER_KEY"></string>
    <string name="com.twitter.sdk.android.CONSUMER_SECRET"></string>

    <string name="html" translatable="false">
        <![CDATA[
        <html>
            <head></head>
            <body>%1$s</body>
        </html>
        ]]>
    </string>

    <string name="html_rtl" translatable="false">
        <![CDATA[
        <html dir="rtl">
            <head></head>
            <body>%1$s</body>
        </html>
        ]]>
    </string>

 <string name="facebook_app_id">12345678</string>
    <string name="single_upload">Single Upload</string>
    <string name="bulk_upload">Bulk Upload</string>

</resources>
