<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.appbar.AppBarLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:elevation="0dp">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/appThemeColor_1"
        app:contentInsetLeft="0dp"
        app:contentInsetStart="0dp"
        android:contentInsetLeft="0dp"
        android:contentInsetStart="0dp"
        app:layout_scrollFlags="scroll|enterAlways"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">


            <ImageView
                android:id="@+id/backImgView"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center_vertical"
                android:rotationY="@integer/angle_rtl_180"
                android:src="@mipmap/ic_back_arrow"
                android:tint="@color/appThemeColor_TXT_1" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="start|center"
                android:layout_weight="1"
                android:gravity="start|center"
                android:orientation="vertical"
                android:paddingEnd="10dp"
                android:paddingStart="10dp">

                <com.view.MTextView
                    android:layout_weight="1"
                    android:includeFontPadding="false"
                    android:id="@+id/titleTxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start|center_vertical"
                    android:singleLine="true"
                    android:text="# 12456"
                    android:textAlignment="viewStart"
                    android:textColor="@color/appThemeColor_TXT_1"
                    android:textSize="@dimen/txt_size_18"
                    android:textStyle="normal"
                    app:customTypeFace="@string/systemMediumFont" />

                <com.view.MTextView
                    android:layout_marginTop="@dimen/_2sdp"
                    android:layout_weight="1"
                    android:id="@+id/subTitleTxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start|center_vertical"
                    android:text="15 Jan , 12:54 PM"
                    android:textAlignment="viewStart"
                    android:textColor="@color/appThemeColor_TXT_1"
                    android:textSize="@dimen/txt_size_12"
                    android:textStyle="normal"
                    android:visibility="visible"
                    app:customTypeFace="@string/systemRegular" />

                <com.view.AutoResizeTextView
                    android:layout_marginTop="@dimen/_2sdp"
                    android:layout_weight="1"
                    android:id="@+id/autosubTitleTxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start|center_vertical"
                    android:text=""
                    android:textAlignment="viewStart"
                    android:textColor="@color/appThemeColor_TXT_1"
                    android:textSize="@dimen/_10ssp"
                    android:textStyle="normal"
                    android:visibility="gone"
                    app:customTypeFace="@string/systemRegular" />

            </LinearLayout>


            <com.view.MTextView
                android:layout_marginEnd="@dimen/_10sdp"
                android:id="@+id/helpTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="Help"
                android:textColor="@color/appThemeColor_TXT_1"
                android:textSize="@dimen/txt_size_18"
                android:textStyle="normal"
                android:visibility="gone"
                app:customTypeFace="@string/robotolightFont" />

            <ImageView
                android:id="@+id/iconImgView"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_alignParentEnd="true"
                android:layout_gravity="center"
                android:gravity="end|center"
                android:src="@mipmap/ic_phone"
                android:tint="@color/appThemeColor_TXT_1"
                android:visibility="visible" />

            <ImageView
                android:padding="@dimen/_8sdp"
                android:id="@+id/iconInstructionView"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_alignParentEnd="true"
                android:layout_gravity="center"
                android:gravity="end|center"
                app:srcCompat="@drawable/ic_writing"
                android:tint="@color/appThemeColor_TXT_1"
                android:visibility="gone" />

            <ImageView
                android:id="@+id/iconRefreshImgView"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_alignParentEnd="true"
                android:layout_gravity="center"
                android:gravity="end|center"
                android:src="@mipmap/ic_header_refresh"
                android:tint="@color/appThemeColor_TXT_1"
                android:visibility="gone" />

        </LinearLayout>

    </androidx.appcompat.widget.Toolbar>
</com.google.android.material.appbar.AppBarLayout>